Move files from 'modern' folder to regular plugin since it only supports the most recent version.